feat: detect node recovery promptly
